syntax = "proto3";

package auth.v1;


message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginResponse {
  LoginCode login_code = 1;
  optional string token = 2;

  enum LoginCode {
    SUCCESS = 0;
    FAIL = 1;
  } 
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

